# stock-data-fetcher

./: README.md  agents.md  pyproject.toml
stock_data_fetcher/: __init__.py  cli.py  daytrade_fetcher.py  exceptions.py  fetcher.py  institutional_fetcher.py  merger.py  twse_api.py  utils.py  writer.py
tests/: test_cli_parse.py  test_filename.py  test_symbols.py
