[project]
name = "stock-data-fetcher"
version = "0.1.0"
description = "CLI tool for downloading historical market data (CSV) from Yahoo Finance via yfinance."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "yfinance>=0.2.38",
  "pandas>=2.0.0",
  "numpy>=1.24.0"
]

[project.scripts]
stock-data-fetcher = "stock_data_fetcher.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_data_fetcher*"]
